base/dg-lite-frontend/dg-lite-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: dg-lite-frontend
  name: dg-lite-frontend
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: dg-lite-frontend
